src/test/ui/generic-associated-types/issue-87258_b.stderr
error: could not find defining uses
  --> $DIR/issue-87258_b.rs:17:49
   |
LL | type Helper<'xenon, 'yttrium, KABOOM: Trait2> = impl Trait1;
   |                                                 ^^^^^^^^^^^

error: aborting due to previous error

